--- a/.traefik.yml
+++ b/.traefik.yml
@@ -1,5 +1,6 @@
 displayName: CAS Authentication
 type: middleware
+iconPath: .assets/icon.png
 import: github.com/xezpeleta/traefik-cas-auth
 summary: Apereo CAS SSO authentication middleware for Traefik
 testData:
